Prevent datasets from being tracked by the repo
Added data and checkpoints folders to gitignore, but allowed for README
inside data folder to be included containing data download instructions.

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
+# Models (will figure out a good system for sharing these later)
+checkpoints/*
+data/*
+!data/README.md
+
+.DS_Store
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
