--- a/configs/locking/uu.yaml
+++ b/configs/locking/uu.yaml
@@ -1,5 +1,5 @@
-cxr_filepath: 'data/cxr.h5'
-txt_filepath: 'data/mimic_impressions.csv'
+cxr_filepath: '../CheXzero/data/cxr.h5'
+txt_filepath: '../CheXzero/data/mimic_impressions.csv'
 model_path: None
 batch_size: 16
 epochs: 10
