Integrate biovil image stack into CheXzero (#16)
* Load in biovil image inference engine

* Ignore cxr_data

* Add support for loading images for biovision

* Integrate BioViL Vision Stack into CheXzero Code

Added a flag called use_biovision and added in logic to load the BioViL
ResNet model which we are calling BioVision.

* Update Uu yaml and gitignore files

This change updates the Uu yaml file to reflect settings used in our
experiment. Also, it adds the results folder to the gitignore file.

Co-authored-by: aakamishra <aakamishra1@gmail.com>
Co-authored-by: Kostas Tingos <kostastingos@college.harvard.edu>

--- a/configs/locking/Lu.yaml
+++ b/configs/locking/Lu.yaml
@@ -1,3 +1,5 @@
+defaults:
+  - biovision: bio
 cxr_filepath: 'data/cxr.h5'
 txt_filepath: 'data/mimic_impressions.csv'
 model_path: None
@@ -15,4 +17,4 @@ random_init: False
 model_name: "Lu"
 use_cxrbert: False
 lock_text: False
-lock_vision: False
+lock_vision: True
