Fix hydra configs error
Before this change there was an error with the biovision configs with
hydra. The use_biovision config was not being set when certain locking
configs were picked since the biovision entries were not in all the
config files. This change adds biovision info to every locking config
file.

--- a/configs/locking/uU.yaml
+++ b/configs/locking/uU.yaml
@@ -1,4 +1,6 @@
-# @package _global_
+defaults:
+  - biovision: defaults
+
 cxr_filepath: 'data/cxr.h5'
 txt_filepath: 'data/mimic_impressions.csv'
 model_path: None
