--- a/configs/locking/uu.yaml
+++ b/configs/locking/uu.yaml
@@ -1,4 +1,6 @@
-# @package _global_
+defaults:
+  - biovision: defaults
+
 cxr_filepath: 'data/cxr.h5'
 txt_filepath: 'data/mimic_impressions.csv'
 model_path: None
