Add some support for a few HuggingFace BERT models
Currently, we only support CXRBERT. This will add support for BlueBERT
and ClinicalBERT. In order for the models to be equivalent, we are
removing the MLP from CXRBERT and using a common simple linear projection
head trained from scratch for all models. The code is not fully functional
yet as we need to also add support a HuggingFace BERT key argument.

--- a/configs/locking/UU.yaml
+++ b/configs/locking/UU.yaml
@@ -16,6 +16,6 @@ momentum: 0.9
 context_length: 77
 random_init: False
 model_name: "UU"
-use_cxrbert: True
+use_huggingface_bert: True
 lock_text: False
 lock_vision: False
