--- a/configs/locking/Uu.yaml
+++ b/configs/locking/Uu.yaml
@@ -15,6 +15,6 @@ momentum: 0.92
 context_length: 77
 random_init: False
 model_name: "Uu"
-use_cxrbert: False
+use_huggingface_bert: False
 lock_text: False
 lock_vision: False
