--- a/configs/locking/Lu.yaml
+++ b/configs/locking/Lu.yaml
@@ -15,6 +15,6 @@ momentum: 0.9
 context_length: 77
 random_init: False
 model_name: "Lu"
-use_cxrbert: False
+use_huggingface_bert: False
 lock_text: False
 lock_vision: True
