--- a/configs/locking/uL.yaml
+++ b/configs/locking/uL.yaml
@@ -14,6 +14,6 @@ momentum: 0.9
 context_length: 77
 random_init: False
 model_name: "uL"
-use_cxrbert: True
+use_huggingface_bert: True
 lock_text: True
 lock_vision: False
