--- a/configs/locking/uL.yaml
+++ b/configs/locking/uL.yaml
@@ -1,10 +1,10 @@
 # @package _global_
-cxr_filepath: 'data/cxr.h5'
-txt_filepath: '/data/mimic_impressions.csv'
+cxr_filepath: '../CheXzero/data/cxr.h5'
+txt_filepath: '../CheXzero/data/mimic_impressions.csv'
 model_path: None
-batch_size: 16
-epochs: 3
-lr: 1e-4
+batch_size: 32
+epochs: 5
+lr: 5e-6
 save_interval: 1000
 log_interval: 10
 save_dir: "./checkpoints/" 
@@ -13,7 +13,8 @@ optimizer: "sgd"
 momentum: 0.9
 context_length: 77
 random_init: False
-model_name: "uL"
+model_name: "cxrbert_locked"
 use_cxrbert: True
 lock_text: True
 lock_vision: False
+image_tower_type: "clip"
