--- a/configs/locking/uU.yaml
+++ b/configs/locking/uU.yaml
@@ -1,19 +1,19 @@
 # @package _global_
-cxr_filepath: 'data/cxr.h5'
-txt_filepath: 'data/mimic_impressions.csv'
+cxr_filepath: '../CheXzero/data/cxr.h5'
+txt_filepath: '../CheXzero/data/mimic_impressions.csv'
 model_path: None
-batch_size: 16
-epochs: 3
-lr: 1e-4
+batch_size: 32
+epochs: 5
+lr: 1e-5
 save_interval: 1000
 log_interval: 10
 save_dir: "./checkpoints/" 
 seed: 1234
 optimizer: "sgd"
-momentum: 0.9
+momentum: 0.92
 context_length: 77
 random_init: False
-model_name: "uU"
+model_name: "uL"
 use_cxrbert: True
 lock_text: False
 lock_vision: False
