--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,11 @@ data/*
 .hydra/
 cxr_data/*
 visionmodels/vision_pretrained/*
+results/*
+wandb/*
+vindr-cxr/*
+predictions/*
+!predictions/final-checkpoints/
 
 .DS_Store
 
